# gspoof

./: AUTHORS  CHANGELOG  LICENSE  Makefile  Makefile.in  README  TODO  VERSION  acinclude.m4  aclocal.m4  callbacks.c  callbacks.h  common.c  common.h  config.h  config.h.in  configure  configure.ac  console.c  console.h  gfuncts.c  gfuncts.h  ginclude.h  gtk.c  gtk.h  interface.c  interface.h  main.c  support.c  support.h
